feat: Update detail screen OK button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
 
   <!-- Detail Screen -->
   <string name="title_activity_detail">DetailActivity</string>
-  <string name="button_okay">Okay</string>
+  <string name="button_okay">OK</string>
 
   <!-- Main Screen -->
   <string name="glide_by_bumptech">Glide - Image Loading Library by BumpTech.</string>
