--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
   <string name="app_description">Download files from Internet</string>
 
   <!-- Menu -->
-  <string name="action_settings">Settings</string>
+  <string name="label_action_settings">Settings</string>
 
   <!-- Notifications -->
   <string name="notification_channel_name">Download</string>
@@ -16,14 +16,17 @@
 
   <!-- Detail Screen -->
   <string name="title_activity_detail">DetailActivity</string>
-  <string name="button_okay">OK</string>
+  <string name="label_button_ok">OK</string>
 
   <!-- Main Screen -->
-  <string name="glide_by_bumptech">Glide - Image Loading Library by BumpTech.</string>
-  <string name="loadapp_by_udacity">LoadApp - Current repository by Udacity.</string>
-  <string name="retrofit_by_square">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc.</string>
-  <string name="loading_button_text">Download</string>
-  <string name="button_name">Click me</string>
-  <string name="button_loading">We are loading </string>
-  <string name="instruct_to_download">Please select the file to download.</string>
+  <string name="text_glide_by_bumptech">Glide - Image Loading Library by BumpTech.</string>
+  <string name="text_loadapp_by_udacity">LoadApp - Current repository by Udacity.</string>
+  <string name="text_retrofit_by_square">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc.</string>
+  <string name="label_default_button_text">Download</string>
+  <string name="label_loading_button_text">Downloading</string>
+  <string name="toast_instruct_to_download">Please select the file to download.</string>
+
+  <!-- Downloads -->
+  <string name="status_download_successful">Successful</string>
+  <string name="status_download_failed">Failed</string>
 </resources>
