--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,6 @@
   <string name="app_name">Load Status</string>
   <string name="app_description">Download files from Internet</string>
 
-  <!-- Menu -->
-  <string name="label_action_settings">Settings</string>
-
   <!-- Notifications -->
   <string name="notification_channel_name">Download</string>
   <string name="notification_channel_id">download_channel</string>
@@ -23,7 +20,7 @@
   <string name="text_loadapp_by_udacity">LoadApp - Current repository by Udacity.</string>
   <string name="text_retrofit_by_square">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc.</string>
   <string name="label_default_button_text">Download</string>
-  <string name="label_loading_button_text">Downloading</string>
+  <string name="label_loading_button_text">Loading…</string>
   <string name="toast_instruct_to_download">Please select the file to download.</string>
 
   <!-- Downloads -->
